# financial_project_agent

./: .gitignore  README.md  _project_gsheet.py  main.py  pyproject.toml
tpm/: financial_data.db
